--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
 
 <div class="img">
 <img src="img/Imagen3.jpg" >
-<p>En el año 2014, fue que descubrí lo que me gustaba, cuando por primera vez mi tío abrió la PC del hogar, de una vez supe por que la atención fue tan grande que seguí investigando,y al pasar de los años fui revisando las computadora.</p>
+<p>al principio En el año 2014, fue que descubrí lo que me gustaba cuando por primera vez mi tío abrió la PC del hogar, de una vez super que esto es lo mio porque la atención fue tan grande que después seguí investigando, y al pasar de los años fui revisando las computadora.</p>
 
 <h1>Años de sufrimiento</h1>
 
-<p>Cometí muchos errores ya que no contaba con un curso o que alguien me respaldaba y me decía que es lo que tenia que hacer, tuve que hacer las cosas yo solo, busque los clientes, aprender hablar y sobre todo resolverle el problema, hubo momentos donde tuve problemas con clientes por mis propias desiciones, gracias a esas malas y desagradable experiencia, trabajé a empresas grandes que no solo tenia que revisar las computadoras si no también arreglar el internet, los cable, las cámara y aprendí muchas cosas.</p>
+<p>Sobre todo cometí muchos errores ya que no contaba con un curso, ademas tampoco contaba con una persona que me guiará y me decía que es lo que tenia que hacer, tuve que hacer las cosas yo solo, busque los clientes, aprender hablar y sobre todo resolverle el problema, hubo momentos donde tuve problemas con clientes por mis propias desiciones, gracias a esas malas y desagradable experiencia,obtube experiencia, sobre todo trabajé a empresas grandes que no solo tenia que revisar las computadoras si no también arreglar el internet, los cable, las cámara y aprendí muchas cosas.</p>
 
 
 <h1>No solo te voy a revelar mis conocimiento. Si no también entrenamiento online.</h1>
 
-<p>Me ha costado un montón, duré 6 años en esto, ya que cualquier persona puede tener conocimiento, pero no todos tienes la disciplina y la motivación necesaria para surgir en algo que a ti te guste tanto como tener conocimientos cómputos, y eso mismo te voy a enseñar, Aquí te resumo en poco tiempo los 6 años de experiencia que tuve.</p>
+<p>En un inicio me ha costado un montón, duré 6 años en esto, cualquier persona puede tener conocimiento, sin embargo no todos tienes la disciplina y la motivación necesaria para surgir en algo que a ti te guste tanto como tener conocimientos cómputos, y eso mismo te voy a enseñar, Aquí te resumo en poco tiempo los 6 años de experiencia que tuve.</p>
 
 
 <img src="img/calor.png">
 
 <h1>¿Cada vez que comienzas un curso o aprender algo, terminar a la mitad por no tener la motivación necesaria?</h1>
 
-<p>pase cantidades de veces por esa misma situación, te entiendo, pero aquí te voy a dar no solo motivación si no también disciplina porque voy a estar en cada semana apoyandote, sirviéndote y sobre todo comprobar lo que te he enseñado.</p>
+<p>pase cantidades de veces por esa misma situación, te entiendo, aquí te voy a dar no solo motivación si no también disciplina porque voy a estar en cada semana apoyandote, sirviéndote y sobre todo comprobar lo que te he enseñado.</p>
 </div>
 
 <!--<div class="nivel1">-->
 
 <div class="img">	
 <h1>¿La diferencia entre de mi y otros cursos online?</h1>
-<p>Yo aquí no solo te voy a dar PDF,VÍDEOS o WORD, si no también por cada semana vamos a estar en vivo por que yo voy estar atrás tuyo y comprobar lo que aprendiste en las clases anteriores, Quiere decir que yo voy a programarte citas online por cada cierta semana estaremos en comunicación y valuaremos como vas aprendiendo.</p>	
+<p>permítanme explicarle Yo aquí no solo te voy a dar PDF,VÍDEOS o WORD, si no también por cada semana vamos a estar en vivo por que yo voy estar atrás tuyo y comprobar lo que aprendiste en las clases anteriores, Quiere decir que yo voy a programarte citas online por cada cierta semana estaremos en comunicación y valuaremos como vas aprendiendo.</p>	
 
 
 <img src="img/calorr.png" width="400" height="600">
