--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1 class="a">Como Fui de saber nada a tener una disciplina y motivación para ser un experto reparando toda clase de computadoras</h1>
+<h1 class="a">Como fuí de saber nada a tener una disciplina y motivación para ser un experto reparando toda clase de computadoras</h1>
 
 
 <h1 class="historia">Mi historia</h1>
@@ -16,30 +16,31 @@
 
 <div class="img">
 <img src="img/Imagen3.jpg" >
-<p>al principio En el año 2014, fue que descubrí lo que me gustaba cuando por primera vez mi tío abrió la PC del hogar, de una vez super que esto es lo mio porque la atención fue tan grande que después seguí investigando, y al pasar de los años fui revisando las computadora.</p>
+<p>Al principio en el año 2014, fue que descubrí lo que me gustaba cuando por primera vez mi tío abrió la PC del hogar, de una vez super que esto es lo mio porque la atención fue tan grande que después seguí investigando, y al pasar de los años fui revisando las computadora.</p>
 
 <h1>Años de sufrimiento</h1>
 
 <p>Sobre todo cometí muchos errores ya que no contaba con un curso, ademas tampoco contaba con una persona que me guiará y me decía que es lo que tenia que hacer, tuve que hacer las cosas yo solo, busque los clientes, aprender hablar y sobre todo resolverle el problema, hubo momentos donde tuve problemas con clientes por mis propias desiciones, gracias a esas malas y desagradable experiencia,obtube experiencia, sobre todo trabajé a empresas grandes que no solo tenia que revisar las computadoras si no también arreglar el internet, los cable, las cámara y aprendí muchas cosas.</p>
 
 
-<h1>No solo te voy a revelar mis conocimiento. Si no también entrenamiento online.</h1>
+<h1>No solo te voy a revelar mis conocimiento, sino también entrenamiento online.</h1>
 
-<p>En un inicio me ha costado un montón, duré 6 años en esto, cualquier persona puede tener conocimiento, sin embargo no todos tienes la disciplina y la motivación necesaria para surgir en algo que a ti te guste tanto como tener conocimientos cómputos, y eso mismo te voy a enseñar, Aquí te resumo en poco tiempo los 6 años de experiencia que tuve.</p>
+<p class="er">Me ha costado un montón, duré 6 años en esto, cualquier persona puede tener conocimiento, sin embargo no todos tienen la disciplina y la motivación necesaria para surgir en algo que a ti te guste tanto como tener conocimientos cómputos, y eso mismo te voy a enseñar, aquí te resumo en poco tiempo los 6 años de experiencia que tuve.</p>
 
 
 <img src="img/calor.png">
 
-<h1>¿Cada vez que comienzas un curso o aprender algo, terminar a la mitad por no tener la motivación necesaria?</h1>
+<h1>¿Cada vez que comienzas un curso o aprender algo, termina a la mitad por no tener la motivación necesaria?</h1>
 
-<p>pase cantidades de veces por esa misma situación, te entiendo, aquí te voy a dar no solo motivación si no también disciplina porque voy a estar en cada semana apoyandote, sirviéndote y sobre todo comprobar lo que te he enseñado.</p>
+<p>Pase cantidades de veces por esa misma situación, te entiendo, aquí te voy a dar no solo motivación si no también disciplina porque voy a estar en cada semana apoyandote, sirviéndote y sobre todo comprobando lo que te he enseñado.</p>
 </div>
 
 <!--<div class="nivel1">-->
 
 <div class="img">	
-<h1>¿La diferencia entre de mi y otros cursos online?</h1>
-<p>permítanme explicarle Yo aquí no solo te voy a dar PDF,VÍDEOS o WORD, si no también por cada semana vamos a estar en vivo por que yo voy estar atrás tuyo y comprobar lo que aprendiste en las clases anteriores, Quiere decir que yo voy a programarte citas online por cada cierta semana estaremos en comunicación y valuaremos como vas aprendiendo.</p>	
+<h1>¿La diferencia entre mi y otros cursos online?</h1>
+
+<p>Permítanme explicarle Yo aquí no solo te voy a dar PDF,VÍDEOS o WORD, si no también por cada semana vamos a estar en vivo por que yo voy estar atrás tuyo y comprobar lo que aprendiste en las clases anteriores,es decir que yo voy a programarte citas online por cada cierta semana estaremos en comunicación y evaluaremos como vas aprendiendo.</p>	
 
 
 <img src="img/calorr.png" width="400" height="600">
@@ -47,7 +48,7 @@
 
 <h1>No es un curso Con vídeos, es un curso personalizado para cada persona.</h1>
 
-<p> A lo mejor estarás pensando que el curso que veras son solo vídeoss grabado de hace 1 año o meses, pues no, porque yo mismo voy a darte clases personalizadas por mi todo dependerá de tus capacidades y teorías que sepas, Yo mismo voy a entrenarte.</p>
+<p> A lo mejor estarás pensando que el curso que veras son solo vídeos grabado de hace 1 año o meses, pues no, porque yo mismo voy a darte clases personalizadas. Por mi todo dependerá de tus capacidades y conocimientos que tengas, Yo mismo voy a entrenarte.</p>
 </div>
 
 
@@ -75,7 +76,7 @@
 <hr>
 				   <img src="img/garantia.png">
 
-	  			   <p>Lo mejor del caso, si despues de los 30 días de entrenamiento no te sientes sactifecho con los resultados que estas obteniendo, te devolvemos tu dinero.</p>
+	  			   <p>Lo mejor del caso, si despues de los 30 días de entrenamiento si no te sientes sactifecho con los resultados que estas obteniendo, te devolvemos tu dinero.</p>
 </div>
 
 
