--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <img src="img/calorr.png" width="400" height="600">
 <header></header>
 
-<h1>No es un curso Con vídeos, es un curso personalizado para cada persona.</h1>
+<h1>No es un curso con vídeos, es un curso personalizado para cada persona.</h1>
 
 <p> A lo mejor estarás pensando que el curso que veras son solo vídeos grabado de hace 1 año o meses, pues no, porque yo mismo voy a darte clases personalizadas. Por mi todo dependerá de tus capacidades y conocimientos que tengas, Yo mismo voy a entrenarte.</p>
 </div>
