--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
 <div class="img">
 <img src="img/Imagen3.jpg" >
-<p>Al principio en el año 2014, fue que descubrí lo que me gustaba cuando por primera vez mi tío abrió la PC del hogar, de una vez super que esto es lo mio porque la atención fue tan grande que después seguí investigando, y al pasar de los años fui revisando las computadora.</p>
+<p>Al principio en el año 2014, fue que descubrí lo que me gustaba cuando por primera vez mi tío abrió la PC del hogar, de una vez súper que esto es lo mío porque la atención fue tan grande que después seguí investigando, y al pasar de los años fui aprendiendo en las computadoras.</p>
 
 <h1>Años de sufrimiento</h1>
 
-<p>Sobre todo cometí muchos errores ya que no contaba con un curso, ademas tampoco contaba con una persona que me guiará y me decía que es lo que tenia que hacer, tuve que hacer las cosas yo solo, busque los clientes, aprender hablar y sobre todo resolverle el problema, hubo momentos donde tuve problemas con clientes por mis propias desiciones, gracias a esas malas y desagradable experiencia,obtube experiencia, sobre todo trabajé a empresas grandes que no solo tenia que revisar las computadoras si no también arreglar el internet, los cable, las cámara y aprendí muchas cosas.</p>
+<p>Sobre todo cometí muchos errores, ya que no contaba con un curso, además tampoco contaba con una persona que me guiará y me dijera que es lo que tenía que hacer, tuve que hacer las cosas yo solo, buscar los clientes, aprender hablar y sobre todo resolverle el problema, hubo momentos donde tuve problemas con clientes por mis propias decisiones, gracias a esas malas y desagradable experiencia, obtuve experiencia, sobre todo trabajé a empresas grandes que no solo tenía que revisar las computadoras, sino también arreglar el internet,  el cableado, las cámaras y aprendí muchas cosas.</p>
 
 
-<h1>No solo te voy a revelar mis conocimiento, sino también entrenamiento online.</h1>
+<h1>No solo te voy a revelar mis conocimientos, sino también entrenamiento online.</h1>
 
 <p class="er">Me ha costado un montón, duré 6 años en esto, cualquier persona puede tener conocimiento, sin embargo no todos tienen la disciplina y la motivación necesaria para surgir en algo que a ti te guste tanto como tener conocimientos cómputos, y eso mismo te voy a enseñar, aquí te resumo en poco tiempo los 6 años de experiencia que tuve.</p>
 
@@ -32,7 +32,7 @@
 
 <h1>¿Cada vez que comienzas un curso o aprender algo, termina a la mitad por no tener la motivación necesaria?</h1>
 
-<p>Pase cantidades de veces por esa misma situación, te entiendo, aquí te voy a dar no solo motivación si no también disciplina porque voy a estar en cada semana apoyandote, sirviéndote y sobre todo comprobando lo que te he enseñado.</p>
+<p>Pase cantidades de veces por esa misma situación, te entiendo, aquí te voy a dar no solo motivación, sino también disciplina porque voy a estar en cada semana apoyándote, sirviéndote y sobre todo comprobando lo que te he enseñado.</p>
 </div>
 
 <!--<div class="nivel1">-->
@@ -40,7 +40,7 @@
 <div class="img">	
 <h1>¿La diferencia entre mi y otros cursos online?</h1>
 
-<p>Permítanme explicarle Yo aquí no solo te voy a dar PDF,VÍDEOS o WORD, si no también por cada semana vamos a estar en vivo por que yo voy estar atrás tuyo y comprobar lo que aprendiste en las clases anteriores,es decir que yo voy a programarte citas online por cada cierta semana estaremos en comunicación y evaluaremos como vas aprendiendo.</p>	
+<p>Permítanme explicarle Yo aquí no solo te voy a dar PDF, VÍDEOS o WORD, sino también por cada semana vamos a estar en vivo porque yo voy a estar atrás tuyo y comprobar lo que aprendiste en las clases anteriores, es decir que yo voy a programarte citas online por cada cierta semana estaremos en comunicación y evaluaremos como vas aprendiendo.</p>	
 
 
 <img src="img/calorr.png" width="400" height="600">
@@ -48,7 +48,7 @@
 
 <h1>No es un curso con vídeos, es un curso personalizado para cada persona.</h1>
 
-<p> A lo mejor estarás pensando que el curso que veras son solo vídeos grabado de hace 1 año o meses, pues no, porque yo mismo voy a darte clases personalizadas. Por mi todo dependerá de tus capacidades y conocimientos que tengas, Yo mismo voy a entrenarte.</p>
+<p> A lo mejor estarás pensando que el curso que verás son solo vídeos grabados de hace 1 año o meses, pues no, porque yo mismo voy a darte clases personalizadas. Por mi todo dependerá de tus capacidades y conocimientos que tengas, Yo mismo voy a entrenarte.</p>
 </div>
 
 
@@ -72,11 +72,11 @@
 
 
 <div class="nivel3">
-				   <h1>Garantia por 30 días</h1>
+				   <h1>Garantía por 30 días</h1>
 <hr>
 				   <img src="img/garantia.png">
 
-	  			   <p>Lo mejor del caso, si despues de los 30 días de entrenamiento si no te sientes sactifecho con los resultados que estas obteniendo, te devolvemos tu dinero.</p>
+	  			   <p>Lo mejor del caso, si después de los 30 días de entrenamiento si no te sientes satisfecho con los resultados que estás obteniendo, te devolvemos tu dinero.</p>
 </div>
 
 
@@ -94,11 +94,11 @@
 	  <li>HARDWARE: procesador, tarjeta madre<br> memoria ram, tarjeta grafica,fuente de poder,Bios,Chisep,<br>chip de video</li>
 	  <li>ELECTRONICA: Voltaje, Watts o Vatios, Resistencia,<br> Señales electricas, Entrada y salidad</li>
 	  <li>MARCAS: intel, AMD, GeForce, Asus, kingston, western Digital.</li>
-	  <li>Clases online con entrenamiento practicos</li>
+	  <li>Clases online con entrenamiento práctico</li>
 	  <li>EXPERIENCIA:Trabajos pequeños, trabajos medios,<br> trabajos grandes, trabajos mayores, trabajos extremos.</li>
 	  <li>Videos Practicos acordado con el cliente</li>
 	  <li>Orientacion online</li>
-	  <li>Un tecnico lo va a orientar en reparar computadora<br> de sus propios clientes.</li>
+	  <li>Un técnico lo va a orientar en reparar computadora<br> de sus propios clientes.</li>
 	  <li>PDF ESCRITOS E INVESTIGACIÓN</li>
 	</ul>
 	<a href="https://tecnoexpand.netlify.app/1/index1.html" target="_blank"><button class="button">Comprar</button></a>
