--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <div class="img">
-<img src="img/Imagen3.jpg" >
+<img src="img/Imagen3.jpg" width="400" height="600">
 <p>Al principio en el año 2014, fue que descubrí lo que me gustaba cuando por primera vez mi tío abrió la PC del hogar, de una vez súper que esto es lo mío porque la atención fue tan grande que después seguí investigando, y al pasar de los años fui aprendiendo en las computadoras.</p>
 
 <h1>Años de sufrimiento</h1>
@@ -28,7 +28,7 @@
 <p class="er">Me ha costado un montón, duré 6 años en esto, cualquier persona puede tener conocimiento, sin embargo no todos tienen la disciplina y la motivación necesaria para surgir en algo que a ti te guste tanto como tener conocimientos cómputos, y eso mismo te voy a enseñar, aquí te resumo en poco tiempo los 6 años de experiencia que tuve.</p>
 
 
-<img src="img/calor.png">
+<img src="img/calor.png" width="400" height="600">
 
 <h1>¿Cada vez que comienzas un curso o aprender algo, termina a la mitad por no tener la motivación necesaria?</h1>
 
